# spill

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
benches/: mpsc.rs
bytecast/: Cargo.toml  README.md
bytecast-macros/: Cargo.toml
bytecast-macros/src/: lib.rs
bytecast-macros/src/bytes/: from_bytes.rs  mod.rs  to_bytes.rs
bytecast-macros/tests/: derive.rs
bytecast/examples/: alloc.rs  custom_struct.rs  derive.rs  facet_bridge.rs  rkyv_bridge.rs  serde_bridge.rs
bytecast/src/: error.rs  lib.rs  serializer.rs  traits.rs
bytecast/src/bridges/: facet.rs  mod.rs  rkyv.rs  serde.rs
bytecast/src/impls/: alloc.rs  macros.rs  mod.rs  tuple.rs  wrapper.rs
bytecast/src/tests/: alloc.rs  facet.rs  mod.rs  rkyv.rs  serde.rs
examples/: compio_file_copy.rs  mpsc.rs  mpsc_zero_contention.rs
pebble/: Cargo.toml  README.md  TODO.md
pebble/examples/: files.rs  pebble_branching.rs  pebble_computation.rs  pebble_rebuild.rs
pebble/examples/common/: mod.rs
pebble/src/: game.rs  lib.rs  strategy.rs
pebble/src/dag/: mod.rs
pebble/src/manager/: builder.rs  mod.rs  pebble_manager.rs  rebuild.rs  recovery.rs  safety.rs
pebble/src/manager/cold/: direct.rs  mod.rs  parallel.rs  ring.rs
pebble/src/manager/warm/: cache.rs  mod.rs
pebble/src/storage/: memory.rs
pebble/src/tests/: manager.rs  mod.rs  safety.rs
spill-ring/: Cargo.toml  README.md
spill-ring-core/: Cargo.toml  README.md
spill-ring-core/benches/: chaining.rs  comparison.rs  latency.rs  mpsc.rs  spsc.rs  throughput.rs
spill-ring-core/examples/: compio_file_copy.rs  mpsc.rs  mpsc_zero_contention.rs  spsc.rs
spill-ring-core/src/: index.rs  iter.rs  lib.rs  mpsc.rs  ring.rs  sink.rs  tests.rs  traits.rs
spill-ring-core/src/bytes/: mod.rs  tests.rs
spill-ring-macros/: Cargo.toml
spill-ring-macros/src/bytes/: from_bytes.rs  to_bytes.rs
spill-ring/benches/: chaining.rs  comparison.rs  latency.rs  mpsc.rs  spsc.rs  throughput.rs
spill-ring/examples/: backpressure.rs  compio_file_copy.rs  copy_file_range.rs  mpsc.rs  mpsc_zero_contention.rs  spsc.rs
spill-ring/src/: builder.rs  error.rs  index.rs  iter.rs  lib.rs  mpsc.rs  pool.rs  read.rs  ring.rs  sink.rs  spsc.rs  traits.rs
spill-ring/src/bytes/: traits.rs
spill-ring/src/mpsc/: barrier.rs  consumer.rs  mod.rs  pool.rs  producer.rs
spill-ring/src/tests/: concurrency.rs  mod.rs  mpsc.rs  ring.rs  ring_chaining.rs  sink.rs  spout.rs  traits.rs
spout/: Cargo.toml
spout/src/: lib.rs  traits.rs
spout/src/impls/: bytecast_impls.rs  core_impls.rs  mod.rs  std_impls.rs
spout/src/tests/: bytecast_spouts.rs  mod.rs  producer_spout.rs  std_spouts.rs
src/: index.rs  lib.rs  ring.rs  sink.rs
src/bytes/: error.rs  impls.rs  mod.rs  tests.rs  traits.rs
verdict/: README.md
verdict/examples/: bounded.rs  facet_json.rs  retry.rs  serde_json.rs
verdict/src/: lib.rs  status.rs
verdict/src/heap/: context.rs  contextualized.rs  ext.rs  log_record.rs  mod.rs  retry.rs  sinks.rs
verdict/src/macros/: display_error.rs
verdict/src/tests/: alloc.rs  mod.rs
