[package]
name = "bytecast"
version = "1.0.0-rc.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = ""
repository = "https://github.com/abmac-io/spill/bytecast"
keywords = ["bytes", "serialization", "zero-copy", "no_std", "pod"]
categories = ["encoding", "no-std"]

[dependencies]
bytecast-macros = { path = "../bytecast-macros", optional = true }
zerocopy = { version = "0.8", default-features = false }

[dev-dependencies]
zerocopy = { version = "0.8", features = ["derive"] }

[features]
std = ["alloc", "zerocopy/std"]
alloc = ["zerocopy/alloc"]
derive = ["dep:bytecast-macros"]
