[package]
name = "bytecast"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Fast, simple byte serialization for Rust. no_std compatible with zerocopy internals."
repository = "https://github.com/abmac-io/abmac-lib"
documentation = "https://docs.rs/bytecast"
readme = "README.md"
keywords = ["bytes", "serialization", "zero-copy", "no_std", "embedded"]
categories = ["encoding", "no-std", "embedded"]

[dependencies]
bytecast-macros = { path = "../bytecast-macros", optional = true }
zerocopy = { version = "0.8", default-features = false }

[dev-dependencies]
zerocopy = { version = "0.8", features = ["derive"] }

[features]
std = ["alloc", "zerocopy/std"]
alloc = ["zerocopy/alloc"]
derive = ["dep:bytecast-macros"]
