[package]
name = "spill-ring"
version = "1.0.0-rc.2"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Core no_std ring buffer with overflow-to-spout semantics"
repository = "https://github.com/abmac-io/abmac-lib"
documentation = "https://docs.rs/spill-ring"
readme = "README.md"
keywords = ["ring-buffer", "no_std", "embedded", "lock-free", "spout"]
categories = ["data-structures", "no-std", "embedded"]

[features]
default = []
std = ["spout/std"]
atomics = []

[dependencies]
spout = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
compio = { version = "0.17", features = ["macros"] }
libc = "0.2"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "spsc"
harness = false
required-features = ["atomics"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "mpsc"
harness = false
required-features = ["std"]

[[example]]
name = "compio_file_copy"
required-features = ["atomics"]
